<resources>
    <string name="app_name">Paint</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="start">Start</string>
    <string name="home">Home</string>
    <string name="splash">Welcome to Paint!</string>
    <string name="group">Group: Catarina Moita</string>
    <string name="change">Change</string>
    <string name="choose">Choose a color for the Home background:</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
</resources>