<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Splash">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textSize="22dp"
        android:text="@string/choose" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radioYellow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radioGreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radioRed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radioBlue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:textSize="20dp" />

    </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:id="@+id/button"
        android:onClick="onClickColor"
        android:layout_gravity="center_horizontal" />


</LinearLayout>